# wagtail2nix

./: .env.dev  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  compose.dev.yaml  compose.override.yaml  compose.yaml  flake.nix  pyproject.toml
.devcontainer/: .env.dev  compose.yaml  devcontainer.json
src/: Dockerfile  entrypoint.sh
src/main/: __init__.py
src/main/management/commands/: init_admin.py
src/main/settings/: base.py  dev.py  production.py
