[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
 "wagtail==7.2",
 "django==5.2",
 "gunicorn>=23.0.0",
 "psycopg2-binary>=2.9.11",
]

[project.scripts]
hello = "main:hello"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
